# Semantic-mapping-for-Autonomous-Vehicles

./: .gitignore  Dockerfile  README.md  model_link.txt  move.sh  move_directory.sh  start_container.sh
HF_segmentation/: class_distribution.ipynb  create_masks_b5.py  main_wandb.py  segment_veh.py  sem-seg-pub-veh.ipynb  simple_viewer.py
segmentation_model_training/: requirements.txt  train.py
segmentation_model_training/configs/: default_config.py
segmentation_model_training/datamodules/: seg_datamodule.py
segmentation_model_training/datamodules/datasets/: seg_dataset.py
segmentation_model_training/losses/: dice_focal_loss.py  dice_loss.py  focal_loss.py  loss_wrapper.py
segmentation_model_training/metrics/: dice_metrics.py  iou_metrics.py
segmentation_model_training/models/: segmentation_model.py
segmentation_model_training/utils/: calculate_weights_for_focal_loss.py  merge_images_and_fence_building_class.py  visualize_results.py  visualize_results_onnx.py
segmentation_node/: CMakeLists.txt  package.xml
segmentation_node/include/segmentation_node/: segmentation_node.hpp
segmentation_node/launch/: segmentation_node_launch.py  segmentation_node_launch_sam2.py
segmentation_node/rviz/: segmentation_node.rviz
segmentation_node/src/: segmentation_node.cpp  semantic_octomap_saver.cpp
utils/: deeplab3.py  inference_time_calculation.py  model_deeplab.py  pidnet_model.py  pointcloud_accuracy_calculation.py  ros2_bag_to_png.py  viewer.py  wandb_models.py
utils/segmentation_with_sam/: Dockerfile  README.md  generate_masks_for_training.py  generate_masks_for_training_with_batch_queries.py  requirements.txt  start_container.sh
utils/segmentation_with_sam/lang_sam/models/: gdino.py
